fixed navbar on tablets

--- a/components/Logo/Logo.module.css
+++ b/components/Logo/Logo.module.css
@@ -11,7 +11,7 @@
     width: 130px;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 780px) {
     .Logo {
         margin-right: 3rem;
     }
